try fixing the spacing

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@ html {
 
 h1 {
 	font-size: 3em;
-	width: 16em;
+	display: table-cell;
+	vertical-align: top;
 	margin: 0;
 	text-transform: lowercase;
 }
@@ -23,6 +24,8 @@ ul.nav,
 
 .nav li {
 	display: inline;
+	vertical-align: top;
+	align:right;	
 }
 
 .nav li:last-child:before {
@@ -41,8 +44,12 @@ ul.nav,
 	margin-right: auto; 
 }
 
-.works h3,
-.works p {
+.mast .desc {
+	display: none;
+}
+	
+.desc h3,
+.desc p {
 	font-size: 1em;  
 	display: inline;
 }
@@ -102,14 +109,14 @@ ul.nav,
 @media screen and (min-width: 600px) {
 
 	body:target .mast {
-		height: 2.4em;
+		width: 100%;
+		display: table;
 	}
 
 	body:target .works .display {
 		display: block;
-		height: 74vh;
+		height: 70vh;
 		width: 100%;
-		margin-top: -1.4em;
 		text-align: right;
 		
 	}
@@ -125,6 +132,9 @@ ul.nav,
 		width: 100%;
 		height: 18vh;	
 		overflow: auto;
+		max-width: 960px;
+		margin-left: auto;
+		margin-right: auto;		
 	}
 
 	body:target .works .thumbnail,
@@ -143,23 +153,24 @@ ul.nav,
 	}
 	
 	body:target .mast .nav {
-		display: inline-block;
-		padding-top: .4em;
+		display: table-cell;
+		padding-top: .8em;
+		text-align: right;
+	}
+
+	body:target .mast h2 {
+		display: table-cell;
+	}
+
+	body:target .mast .desc {
+		display: table-cell;
+		text-align: right;
 	}
 	
-	body:target .mast h1 {
-		display: inline-block;
-		vertical-align: top;
-	}		
 	body:target .works .desc {
 		display: none;
 	}
 
-	body:target .display  .desc {
-		display: block;
-		margin-top: -1.4em;
-	}
-	
 }
 
 @media screen and (min-width: 1200px) {
